# Rust_Rocket

./: Cargo.toml  README.md
src/: main.rs
static/: script.js  style.css
templates/: home.hbs
