[package]
name = "rust_rocket"
version = "0.1.0"
authors = ["Andrew Miller <206alm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "serve"]